Fixed the weird card looking background behind current-img

--- a/src/css/Events.css
+++ b/src/css/Events.css
@@ -368,7 +368,7 @@ intro-container{
     .current-img{
         /* border-radius: 20px; */
         box-shadow: 1px 1px 2px 2px rgba(26, 22, 20, 0.246);
-        max-height: 600px;
+        height: 600px;
         /* object-fit: contain; */
         /* max-width: 900px; */
     }
@@ -388,17 +388,17 @@ intro-container{
     .current-img{
         /* border-radius: 20px; */
         box-shadow: 1px 1px 2px 2px rgba(123, 111, 105, 0.361);
-        max-height: 700px;
+        height: 700px;
         /* object-fit: cover; */
         object-fit: none;
-        max-width: 500px;
+        width: 900px;
     }
 }
 @media (min-height: 800px) and (max-height:1000px){
     .current-img{
         margin: 0px 10px 10px 10px;
-        max-height: 500px;
-        max-width: 900px;
+        height: 500px;
+        width: 900px;
     }
     .description-CE-container{
         padding: 15px;
@@ -608,7 +608,7 @@ intro-container{
 }
 @media screen and (max-width: 595px) {
     .signup-form label, .duplicate{
-        width: 200px;
+        /* width: 200px; */
     }
     .rules-container{
         max-width: 320px;
